--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
     package="com.example.food_delivery">
 
     <application
-        android:name="io.flutter.app.FlutterApplication"
         android:label="Burger"
         android:icon="@mipmap/burger">
         <meta-data android:name="com.google.android.geo.API_KEY"
@@ -17,6 +16,9 @@
             <meta-data
                 android:name="io.flutter.app.android.SplashScreenUntilFirstFrame"
                 android:value="true" />
+            <meta-data
+                android:name="flutterEmbedding"
+                android:value="2" />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
